--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
         run: make vet
 
       - name: Run linter
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: latest
+          version: v2.6
 
       - name: Build
         run: make build
@@ -43,3 +43,4 @@ jobs:
 
       - name: Verify binary
         run: ./bin/grule-lint --version
+
